refactor: #6 accessToken 만 유효성 검사 하도록 수정